--- a/src/main/resources/workoutJournal/LogSleep.fxml
+++ b/src/main/resources/workoutJournal/LogSleep.fxml
@@ -23,7 +23,7 @@
          <children>
             <Pane prefHeight="202.0" prefWidth="400.0">
                <children>
-                  <Label alignment="CENTER_RIGHT" layoutX="74.0" layoutY="148.0" prefHeight="17.0" prefWidth="51.0" text="Time:" />
+                  <Label alignment="CENTER_RIGHT" layoutX="74.0" layoutY="148.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
                   <TextField layoutX="133.0" layoutY="143.0" prefHeight="26.0" prefWidth="146.0" />
                   <Label layoutX="277.0" layoutY="148.0" text="min" />
                   <Label alignment="CENTER" layoutX="119.0" layoutY="14.0" prefHeight="84.0" prefWidth="174.0" text="Log Sleep">
