--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -83,7 +83,7 @@
                   <TextField layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" />
                   <TextField layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="21.0" prefHeight="17.0" prefWidth="51.0" text="Distance:" />
-                  <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Time:" />
+                  <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="85.0" prefHeight="17.0" prefWidth="51.0" text="Workout:" />
                   <Button fx:id="reset" layoutX="167.0" layoutY="121.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="79.0" text="Reset" />
                   <Button fx:id="addWorkout" layoutX="103.0" layoutY="166.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
@@ -93,6 +93,7 @@
                   </Button>
                   <Label layoutX="249.0" layoutY="21.0" text="km" />
                   <Label layoutX="247.0" layoutY="55.0" text="min" />
+                  <Label layoutX="104.0" layoutY="85.0" prefHeight="17.0" prefWidth="293.0" text="workout to be entered" />
                </children>
             </Pane>
          </children>
