--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -29,6 +30,14 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <Spinner layoutX="151.0" layoutY="67.0" />
+                  <Spinner layoutX="151.0" layoutY="26.0" />
+                  <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="31.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
+                  <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="71.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
                </children>
             </Pane>
          </children>
