--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -80,12 +80,13 @@
             </GridPane>
             <Pane prefHeight="181.0" prefWidth="400.0" GridPane.rowIndex="2">
                <children>
+                  <Button fx:id="reset1" layoutX="216.0" layoutY="122.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="94.0" text="Back" />
                   <TextField layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" />
                   <TextField layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="21.0" prefHeight="17.0" prefWidth="51.0" text="Distance:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="85.0" prefHeight="17.0" prefWidth="51.0" text="Workout:" />
-                  <Button fx:id="reset" layoutX="167.0" layoutY="121.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="79.0" text="Reset" />
+                  <Button fx:id="reset" layoutX="103.0" layoutY="122.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="96.0" text="Reset" />
                   <Button fx:id="addWorkout" layoutX="103.0" layoutY="166.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
                      <font>
                         <Font size="20.0" />
