--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,15 +12,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.WorkoutJournalController">
    <children>
-      <GridPane prefHeight="633.0" prefWidth="412.0">
+      <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="5.0" prefHeight="5.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="270.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -38,6 +38,37 @@
                   <Spinner layoutX="151.0" layoutY="26.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="31.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
                   <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="71.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <Label layoutX="111.0" layoutY="13.0" text="You went running" />
+                  <Label alignment="CENTER_RIGHT" layoutX="111.0" layoutY="30.0" prefHeight="17.0" prefWidth="95.0" text="You went skiing" />
+                  <Label layoutX="73.0" layoutY="47.0" text="You did strength training" />
+                  <Label layoutX="133.0" layoutY="64.0" text="You did other" />
+                  <Label layoutX="86.0" layoutY="115.0" text="Average distance was" />
+                  <Label alignment="CENTER_RIGHT" layoutX="86.0" layoutY="135.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
+                  <Label layoutX="217.0" layoutY="13.0" text="x" />
+                  <Label layoutX="217.0" layoutY="30.0" text="x" />
+                  <Label layoutX="217.0" layoutY="47.0" text="x" />
+                  <Label layoutX="217.0" layoutY="64.0" text="x" />
+                  <Label layoutX="211.0" layoutY="115.0" text="xxx" />
+                  <Label layoutX="211.0" layoutY="135.0" text="xxx" />
+                  <Label layoutX="241.0" layoutY="13.0" text="times this month" />
+                  <Label layoutX="241.0" layoutY="30.0" text="times this month" />
+                  <Label layoutX="241.0" layoutY="47.0" text="times this month" />
+                  <Label layoutX="241.0" layoutY="64.0" text="times this month" />
+                  <Label layoutX="241.0" layoutY="115.0" prefHeight="17.0" prefWidth="64.0" text="this month" />
+                  <Label layoutX="241.0" layoutY="135.0" text="this month" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+               <children>
+                  <Button fx:id="logWorkout" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="14.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="251.0" text="Back" textAlignment="CENTER">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
          </children>
