--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -80,21 +80,25 @@
             </GridPane>
             <Pane prefHeight="181.0" prefWidth="400.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="reset1" layoutX="216.0" layoutY="122.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="94.0" text="Back" />
+                  <Button fx:id="backToWorkoutJournal" layoutX="98.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleBackToWorkoutJournal" prefHeight="48.0" prefWidth="210.0" text="Back">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Button>
                   <TextField layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" />
                   <TextField layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="21.0" prefHeight="17.0" prefWidth="51.0" text="Distance:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="85.0" prefHeight="17.0" prefWidth="51.0" text="Workout:" />
-                  <Button fx:id="reset" layoutX="103.0" layoutY="122.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="96.0" text="Reset" />
-                  <Button fx:id="addWorkout" layoutX="103.0" layoutY="166.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
+                  <Button fx:id="reset" layoutX="273.0" layoutY="80.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="73.0" text="Reset" />
+                  <Button fx:id="addWorkout" layoutX="103.0" layoutY="114.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Button>
                   <Label layoutX="249.0" layoutY="21.0" text="km" />
                   <Label layoutX="247.0" layoutY="55.0" text="min" />
-                  <Label layoutX="104.0" layoutY="85.0" prefHeight="17.0" prefWidth="293.0" text="workout to be entered" />
+                  <Label layoutX="101.0" layoutY="85.0" prefHeight="17.0" prefWidth="293.0" text="workout to be entered" />
                </children>
             </Pane>
          </children>
