--- a/src/main/resources/workoutJournal/WorkoutJournal.fxml
+++ b/src/main/resources/workoutJournal/WorkoutJournal.fxml
@@ -25,7 +25,7 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="logWorkout" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="251.0" text="Log Workout" textAlignment="CENTER">
+                  <Button fx:id="logWorkout" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleLogWorkoutButton" prefHeight="75.0" prefWidth="251.0" text="Log Workout" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -34,7 +34,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
-                  <Button fx:id="logSleep" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="251.0" text="Log Sleep" textAlignment="CENTER">
+                  <Button fx:id="logSleep" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleLogSleep" prefHeight="75.0" prefWidth="251.0" text="Log Sleep" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -43,7 +43,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <Button fx:id="weeklyOverview" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="251.0" text="Weekly Overview" textAlignment="CENTER">
+                  <Button fx:id="overview" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleOverview" prefHeight="75.0" prefWidth="251.0" text="Overview" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
