--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.LogWorkoutController">
    <children>
       <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
@@ -80,7 +80,7 @@
             </GridPane>
             <Pane prefHeight="181.0" prefWidth="400.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="backToWorkoutJournal" layoutX="98.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleBackToWorkoutJournal" prefHeight="48.0" prefWidth="210.0" text="Back">
+                  <Button fx:id="backFromLogWorkout" layoutX="98.0" layoutY="194.0" mnemonicParsing="false" onAction="#handleBackFromLogWorkout" prefHeight="48.0" prefWidth="210.0" text="Back">
                      <font>
                         <Font size="16.0" />
                      </font>
