--- a/src/main/resources/workoutJournal/LogSleep.fxml
+++ b/src/main/resources/workoutJournal/LogSleep.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,15 +15,15 @@
 <?import javafx.scene.shape.CubicCurve?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.LogSleepController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.LogSleepController">
    <children>
       <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="235.0" minHeight="10.0" prefHeight="96.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="231.0" minHeight="10.0" prefHeight="171.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="250.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="231.0" minHeight="10.0" prefHeight="216.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -29,7 +31,7 @@
                <children>
                   <Label alignment="CENTER_RIGHT" layoutX="74.0" layoutY="186.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
                   <TextField layoutX="133.0" layoutY="182.0" prefHeight="26.0" prefWidth="146.0" />
-                  <Label layoutX="279.0" layoutY="186.0" text="min" />
+                  <Label layoutX="291.0" layoutY="186.0" text="min" />
                   <Label alignment="CENTER" layoutX="112.0" layoutY="14.0" prefHeight="84.0" prefWidth="189.0" text="Log Sleep &amp; Mood">
                      <font>
                         <Font size="24.0" />
@@ -40,6 +42,11 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
+                  <Button layoutX="131.0" layoutY="222.0" mnemonicParsing="false" text="Confirm Sleep For Today">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -72,11 +79,20 @@
                   <CubicCurve controlX1="-23.5" controlX2="-10.5" controlY1="17.0" controlY2="-12.0" endX="5.5" endY="17.000030517578125" fill="WHITE" layoutX="70.0" layoutY="118.0" startX="-23.5" startY="17.0" stroke="BLACK" />
                   <CubicCurve controlX1="-18.999996185302734" controlX2="-9.5" controlY1="35.217010498046875" controlY2="31.0" endX="-9.5" endY="31.0" fill="WHITE" layoutX="89.0" layoutY="68.0" startX="-18.999996185302734" startY="35.217010498046875" stroke="BLACK" />
                   <CubicCurve controlX1="-23.065277099609375" controlX2="-14.299999237060547" controlY1="38.28533935546875" controlY2="42.600006103515625" endX="-14.299999237060547" endY="42.600006103515625" fill="WHITE" layoutX="67.0" layoutY="61.0" startX="-23.065277099609375" startY="38.28533935546875" stroke="BLACK" />
-                  <CheckBox layoutX="342.0" layoutY="162.0" mnemonicParsing="false" />
-                  <CheckBox layoutX="270.0" layoutY="162.0" mnemonicParsing="false" />
-                  <CheckBox layoutX="197.0" layoutY="162.0" mnemonicParsing="false" />
-                  <CheckBox layoutX="125.0" layoutY="162.0" mnemonicParsing="false" />
-                  <CheckBox layoutX="52.0" layoutY="162.0" mnemonicParsing="false" />
+                  <RadioButton fx:id="mood5" layoutX="52.0" layoutY="163.0" mnemonicParsing="false">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="mood" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="mood4" layoutX="125.0" layoutY="163.0" mnemonicParsing="false" toggleGroup="$mood" />
+                  <RadioButton fx:id="mood3" layoutX="198.0" layoutY="163.0" mnemonicParsing="false" toggleGroup="$mood" />
+                  <RadioButton fx:id="mood2" layoutX="269.0" layoutY="163.0" mnemonicParsing="false" toggleGroup="$mood" />
+                  <RadioButton fx:id="mood1" layoutX="342.0" layoutY="163.0" mnemonicParsing="false" toggleGroup="$mood" />
+                  <Button layoutX="130.0" layoutY="204.0" mnemonicParsing="false" text="Confirm Mood For Today">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -85,6 +101,9 @@
                      <font>
                         <Font size="20.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
