--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.LogWorkoutController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.LogWorkoutController">
    <children>
       <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
@@ -30,7 +31,10 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="date" layoutX="85.0" layoutY="109.0" prefHeight="47.0" prefWidth="231.0" promptText="Enter date" />
+                  <DatePicker fx:id="date" layoutX="85.0" layoutY="109.0" prefHeight="47.0" prefWidth="231.0" promptText="Enter date">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></DatePicker>
                </children>
             </Pane>
             <GridPane prefHeight="140.0" prefWidth="381.0" GridPane.rowIndex="1">
@@ -48,7 +52,10 @@
                         <Button fx:id="running" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleRunning" prefHeight="70.0" prefWidth="115.0" text="Running">
                            <font>
                               <Font size="16.0" />
-                           </font></Button>
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
@@ -56,7 +63,10 @@
                         <Button fx:id="strength" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleStrength" prefHeight="70.0" prefWidth="115.0" text="Strength">
                            <font>
                               <Font size="16.0" />
-                           </font></Button>
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -64,7 +74,10 @@
                         <Button fx:id="skiing" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSkiing" prefHeight="70.0" prefWidth="115.0" text="Skiing">
                            <font>
                               <Font size="16.0" />
-                           </font></Button>
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -72,7 +85,10 @@
                         <Button fx:id="other" alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleOther" prefHeight="70.0" prefWidth="115.0" text="Other">
                            <font>
                               <Font size="16.0" />
-                           </font></Button>
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
                      </children>
                   </Pane>
                </children>
@@ -83,19 +99,28 @@
                      <font>
                         <Font size="16.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <TextField fx:id="distanceField" layoutX="103.0" layoutY="17.0" prefHeight="26.0" prefWidth="146.0" />
                   <TextField fx:id="durationField" layoutX="103.0" layoutY="50.0" prefHeight="26.0" prefWidth="146.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="21.0" prefHeight="17.0" prefWidth="51.0" text="Distance:" />
                   <Label alignment="CENTER_RIGHT" layoutX="44.0" layoutY="55.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
-                  <Button fx:id="reset" layoutX="170.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleReset" prefHeight="17.0" prefWidth="73.0" text="Reset" />
+                  <Button fx:id="reset" layoutX="170.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleReset" prefHeight="17.0" prefWidth="73.0" text="Reset">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Button fx:id="addWorkout" layoutX="103.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddWorkout" prefHeight="70.0" prefWidth="206.0" text="Add Workout">
                      <font>
                         <Font size="20.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Label layoutX="249.0" layoutY="21.0" text="km" />
-                  <Label layoutX="247.0" layoutY="55.0" text="min" />
+                  <Label layoutX="258.0" layoutY="21.0" prefHeight="17.0" prefWidth="20.0" text="km" />
+                  <Label layoutX="258.0" layoutY="55.0" text="min" />
                </children>
             </Pane>
          </children>
