--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.OverviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.OverviewController">
    <children>
       <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
@@ -34,10 +35,18 @@
             </Pane>
             <Pane prefHeight="113.0" prefWidth="412.0" GridPane.rowIndex="1">
                <children>
-                  <Spinner layoutX="151.0" layoutY="67.0" />
-                  <Spinner layoutX="151.0" layoutY="26.0" />
-                  <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="31.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
-                  <Label alignment="CENTER_RIGHT" layoutX="94.0" layoutY="71.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
+                  <Spinner layoutX="127.0" layoutY="68.0" />
+                  <Spinner layoutX="127.0" layoutY="27.0" />
+                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="31.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
+                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="73.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
+                  <Button layoutX="127.0" layoutY="128.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="159.0" text="Update Overview">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -68,6 +77,9 @@
                      <font>
                         <Font size="20.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
