--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -18,10 +18,10 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="5.0" prefHeight="5.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="270.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="125.0" minHeight="5.0" prefHeight="80.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="464.0" minHeight="10.0" prefHeight="315.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="439.0" minHeight="10.0" prefHeight="214.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="181.0" minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0">
@@ -35,11 +35,11 @@
             </Pane>
             <Pane prefHeight="113.0" prefWidth="412.0" GridPane.rowIndex="1">
                <children>
-                  <Spinner layoutX="127.0" layoutY="68.0" />
-                  <Spinner layoutX="127.0" layoutY="27.0" />
-                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="31.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
-                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="73.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
-                  <Button layoutX="127.0" layoutY="128.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="159.0" text="Update Overview">
+                  <Spinner layoutX="127.0" layoutY="216.0" />
+                  <Spinner layoutX="127.0" layoutY="170.0" />
+                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="175.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
+                  <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="221.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
+                  <Button layoutX="127.0" layoutY="262.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="159.0" text="Update Overview">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -51,24 +51,24 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <Label layoutX="111.0" layoutY="13.0" text="You went running" />
-                  <Label alignment="CENTER_RIGHT" layoutX="111.0" layoutY="30.0" prefHeight="17.0" prefWidth="95.0" text="You went skiing" />
-                  <Label layoutX="73.0" layoutY="47.0" text="You did strength training" />
-                  <Label layoutX="133.0" layoutY="64.0" text="You did other" />
-                  <Label layoutX="86.0" layoutY="115.0" text="Average distance was" />
-                  <Label alignment="CENTER_RIGHT" layoutX="86.0" layoutY="135.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
-                  <Label layoutX="217.0" layoutY="13.0" text="x" />
-                  <Label layoutX="217.0" layoutY="30.0" text="x" />
-                  <Label layoutX="217.0" layoutY="47.0" text="x" />
-                  <Label layoutX="217.0" layoutY="64.0" text="x" />
-                  <Label layoutX="211.0" layoutY="115.0" text="xxx" />
-                  <Label layoutX="211.0" layoutY="135.0" text="xxx" />
-                  <Label layoutX="241.0" layoutY="13.0" text="times this month" />
-                  <Label layoutX="241.0" layoutY="30.0" text="times this month" />
-                  <Label layoutX="241.0" layoutY="47.0" text="times this month" />
-                  <Label layoutX="241.0" layoutY="64.0" text="times this month" />
-                  <Label layoutX="241.0" layoutY="115.0" prefHeight="17.0" prefWidth="64.0" text="this month" />
-                  <Label layoutX="241.0" layoutY="135.0" text="this month" />
+                  <Label layoutX="75.0" layoutY="71.0" text="You went running" />
+                  <Label alignment="CENTER_RIGHT" layoutX="75.0" layoutY="94.0" prefHeight="17.0" prefWidth="95.0" text="You went skiing" />
+                  <Label layoutX="37.0" layoutY="118.0" text="You did strength training" />
+                  <Label layoutX="97.0" layoutY="141.0" text="You did other" />
+                  <Label layoutX="51.0" layoutY="182.0" text="Average distance was" />
+                  <Label alignment="CENTER_RIGHT" layoutX="52.0" layoutY="207.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
+                  <Label layoutX="193.0" layoutY="71.0" text="x" />
+                  <Label layoutX="193.0" layoutY="94.0" text="x" />
+                  <Label layoutX="193.0" layoutY="118.0" text="x" />
+                  <Label layoutX="193.0" layoutY="141.0" text="x" />
+                  <Label layoutX="187.0" layoutY="182.0" text="xxx" />
+                  <Label layoutX="187.0" layoutY="207.0" text="xxx" />
+                  <Label layoutX="220.0" layoutY="71.0" text="times this month" />
+                  <Label layoutX="220.0" layoutY="94.0" text="times this month" />
+                  <Label layoutX="220.0" layoutY="118.0" text="times this month" />
+                  <Label layoutX="220.0" layoutY="141.0" text="times this month" />
+                  <Label layoutX="220.0" layoutY="182.0" prefHeight="17.0" prefWidth="90.0" text="km this month" />
+                  <Label layoutX="220.0" layoutY="207.0" prefHeight="17.0" prefWidth="90.0" text="min this month" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
