--- a/src/main/resources/workoutJournal/Overview.fxml
+++ b/src/main/resources/workoutJournal/Overview.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.OverviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="412.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workoutJournal.WorkoutJournalController">
    <children>
       <GridPane prefHeight="732.0" prefWidth="412.0">
         <columnConstraints>
@@ -35,8 +35,6 @@
             </Pane>
             <Pane prefHeight="113.0" prefWidth="412.0" GridPane.rowIndex="1">
                <children>
-                  <Spinner fx:id="yearsSpinner" layoutX="127.0" layoutY="216.0" />
-                  <Spinner fx:id="monthsSpinner" layoutX="127.0" layoutY="170.0" />
                   <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="175.0" prefHeight="17.0" prefWidth="45.0" text="Month:" />
                   <Label alignment="CENTER_RIGHT" layoutX="72.0" layoutY="221.0" prefHeight="17.0" prefWidth="45.0" text="Year:" />
                   <Button fx:id="updateOverview" layoutX="127.0" layoutY="262.0" mnemonicParsing="false" onAction="#handleUpdateOverview" prefHeight="42.0" prefWidth="159.0" text="Update Overview">
@@ -47,6 +45,8 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <TextField fx:id="month" layoutX="126.0" layoutY="171.0" />
+                  <TextField fx:id="year" layoutX="126.0" layoutY="217.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -57,12 +57,12 @@
                   <Label layoutX="97.0" layoutY="141.0" text="You did other" />
                   <Label layoutX="51.0" layoutY="182.0" text="Average distance was" />
                   <Label alignment="CENTER_RIGHT" layoutX="52.0" layoutY="207.0" prefHeight="17.0" prefWidth="119.0" text="Average duration was" />
-                  <Label fx:id="runningAmount" layoutX="193.0" layoutY="71.0" text="x" />
-                  <Label fx:id="skiingAmount" layoutX="193.0" layoutY="94.0" text="x" />
-                  <Label fx:id="strengthAmount" layoutX="193.0" layoutY="118.0" text="x" />
-                  <Label fx:id="otherAmount" layoutX="193.0" layoutY="141.0" text="x" />
-                  <Label fx:id="averageDistance" layoutX="187.0" layoutY="182.0" text="xxx" />
-                  <Label fx:id="averageDuration" layoutX="187.0" layoutY="207.0" text="xxx" />
+                  <Label fx:id="runningAmount" layoutX="193.0" layoutY="71.0" text="0" />
+                  <Label fx:id="skiingAmount" layoutX="193.0" layoutY="94.0" text="0" />
+                  <Label fx:id="strengthAmount" layoutX="193.0" layoutY="118.0" text="0" />
+                  <Label fx:id="otherAmount" layoutX="193.0" layoutY="141.0" text="0" />
+                  <Label fx:id="averageDistance" layoutX="193.0" layoutY="182.0" text="0" />
+                  <Label fx:id="averageDuration" layoutX="193.0" layoutY="207.0" text="0" />
                   <Label layoutX="220.0" layoutY="71.0" text="times this month" />
                   <Label layoutX="220.0" layoutY="94.0" text="times this month" />
                   <Label layoutX="220.0" layoutY="118.0" text="times this month" />
